--- a/Design 04/index.html
+++ b/Design 04/index.html
@@ -26,5 +26,18 @@
 
        </header>
 
+
+       <main>
+
+            <div id = "one">ONE</div>
+            <div id = "two">TWO</div>
+            <div id = "three">THREE</div>
+            <div id = "four">FOUR</div>
+            <div id = "five">FIVE</div>
+            <div id = "six">SIX</div>
+            <div id = "seven">SEVEN</div>
+
+       </main>
+
     </body>
 </html>
