--- a/Design 04/index.html
+++ b/Design 04/index.html
@@ -29,9 +29,34 @@
 
        <main>
 
-            <div id = "one">ONE</div>
-            <div id = "two">TWO</div>
-            <div id = "three">THREE</div>
+            <div id = "one">
+                <h1>Event</h1>
+                <section>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos explicabo impedit excepturi enim? Voluptatum perferendis quidem veritatis officia tempora.
+                </section>
+                <section>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque omnis doloremque placeat, quos eius!
+                </section>
+                <section>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aspernatur repellat, blanditiis, doloremque assumenda fugiat nobis vel modi consequatur est aliquam perferendis officia quidem explicabo rerum accusamus nam laborum ullam sint ut nisi deserunt quo?
+                </section>
+                <section>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim, magni!
+                </section>
+
+            </div>
+            <div id = "two">
+                <img src = "img/m1.png">
+
+                <span>
+                    <h2>Try Our </h2>
+                <h2>Vanila Strawberry</h2>
+                </span>
+
+            </div>
+            <div id = "three">
+                
+            </div>
             <div id = "four">FOUR</div>
             <div id = "five">FIVE</div>
             <div id = "six">SIX</div>
