--- a/Design 04/index.html
+++ b/Design 04/index.html
@@ -55,11 +55,23 @@
 
             </div>
             <div id = "three">
-                
+                <span>
+                    <h2>Cupcake </h2>
+                    <a href = "#"> Choose Flavor</a>
+                </span>
             </div>
-            <div id = "four">FOUR</div>
+            <div id = "four">
+                    <img src = "img/c1.jpeg">
+                    <img src = "img/c2.jpeg">
+                    <img src = "img/c3.jpeg">
+                    <img src = "img/c4.jpeg">
+                    <img src = "img/c5.jpeg">
+                    <img src = "img/c6.jpeg">
+            </div>
             <div id = "five">FIVE</div>
-            <div id = "six">SIX</div>
+            <div id = "six">
+              
+            </div>
             <div id = "seven">SEVEN</div>
 
        </main>
