--- a/Design 06/index.html
+++ b/Design 06/index.html
@@ -19,5 +19,14 @@
                <li>Join Us</li>
             </ul>
         </header>
+
+        
+        <section>
+          <h1>At Your Service</h1>  
+          <p>Just one Click <a href = "#"> Here </a></p> 
+          <p>Car will go toyou no question Ask</p>
+          <p>no register Needed</p>
+        </section>
+
     </body>
 </html>
